load("@fildesh//tool/bazel:fildesh_run.bzl", "fildesh_run")

fildesh_run(
    name = "act_embed_h",
    input_by_xof = {
      "x_c": "protocol.c",
      "x_h": "protocol.h",
    },
    output_by_xof = {"o_h": "act.embed.h"},
    src_content = """
cembed -o $(XOF o_h) $(XOF x_h) $(XOF x_c)
    """,
    tool_by_alias = {"cembed": "@fildesh//tool:cembed"},
    visibility = [
        "//src:__pkg__",
    ],
)

cc_binary(
    name = "udp_ThreeColorRing",
    srcs = [
        "protocol.c",
        "protocol.h",
        "act.h",
    ],
    linkopts = select({
        "@platforms//os:linux": ["-lrt"],
        "//conditions:default": [],
    }),
    target_compatible_with = [
        "@platforms//os:linux",
    ],
)
